syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fleet.grpc.common";
option java_outer_classname = "UserProto";

service UserService {
  rpc get (UserRequest) returns (UserResponse) {}
  rpc insert (UserRequest) returns (BooleanResponse) {}
}

message UserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message BooleanResponse {
  bool bool = 1;
}
